--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <p>Perfekt för företag, lag, team eller enskilda grupper.<br>
            Testa grunderna i skidskytte, både liggande och stående skytte.<br>
            Aktiviteten tar cirka 2 timmar och passar upp till 14 personer.<br>
-           Möjlighet att prova både sommar och vinter.</p>
-        <p class="contact">📞 Kontakt: Andreas Marklund<br>
-           Telefon: 070-5945309<br>
-           E-post: <a href="mailto:antemarklund@gmail.com">antemarklund@gmail.com</a></p>
+           Möjlighet att köra sommar som vinter.</p>
+        <p class="contact">Kontakta Andreas Marklund<br>
+           070-5945309<br>
+           <a href="mailto:antemarklund@gmail.com">antemarklund@gmail.com</a></p>
     </div>
 </body>
 </html>
