--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             text-align: center;
         }
         .container {
-            width: 85%;
-            max-width: 1600px;
+            width: 88%; /* Justerat för smalare ratio */
+            max-width: 1500px;
             height: 80vh;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95); /* Ökad synlighet för logotypen */
             border: 5px solid black;
             border-radius: 40px;
             display: flex;
@@ -47,6 +47,9 @@
             margin-top: 30px;
             font-size: 1.4em;
             font-weight: bold;
+            text-align: left;
+            width: 100%;
+            max-width: 1200px;
         }
         .contact a {
             color: black;
@@ -61,7 +64,7 @@
         <p>Perfekt för företag, lag, team eller enskilda grupper.<br>
            Testa grunderna i skidskytte, både liggande och stående skytte.<br>
            Aktiviteten tar cirka 2 timmar och passar upp till 14 personer.<br>
-           Möjlighet att köra sommar som vinter.</p>
+           Möjlighet att prova både sommar och vinter.</p>
         <p class="contact">Kontakta Andreas Marklund<br>
            070-5945309<br>
            <a href="mailto:antemarklund@gmail.com">antemarklund@gmail.com</a></p>
