--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 88%; /* Justerat för smalare ratio */
             max-width: 1500px;
             height: 80vh;
-            background: rgba(255, 255, 255, 0.95); /* Ökad synlighet för logotypen */
+            background: white; 
             border: 5px solid black;
             border-radius: 40px;
             display: flex;
@@ -73,9 +73,9 @@
            Testa grunderna i skidskytte, både liggande och stående skytte.<br>
            Aktiviteten tar cirka 2 timmar och passar upp till 14 personer.<br>
            Möjlighet att prova både sommar och vinter.</p>
-        <p class="contact">📞 Kontakt: Andreas Marklund<br>
-           Telefon: 070-5945309<br>
-           E-post: <a href="mailto:antemarklund@gmail.com">antemarklund@gmail.com</a></p>
+        <p class="contact">Kontakta Andreas Marklund<br>
+           070-5945309<br>
+           <a href="mailto:antemarklund@gmail.com">antemarklund@gmail.com</a></p>
         <img src="pitea_skidskytte_logo.jpg" alt="Piteå Skidskytte Logotyp" class="logo">
     </div>
 </body>
