--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Sverigeklockan</title>
     <style>
         body {
-            background-color: #4A3F35; /* Mörk beige */
-            color: #FFF8DC; /* Ljust gulaktig färg */
+            background-color: #3A2F28; /* Mörkare beige */
+            color: #FFFBEA; /* Ljusare gulaktig färg */
             display: flex;
             justify-content: center;
             align-items: center;
