--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: green; /* Totalt svart bakgrund utanför textrutan */
+            background: white; /* Totalt svart bakgrund utanför textrutan */
             display: flex;
             align-items: center;
             justify-content: center;
