--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: white; /* Totalt svart bakgrund utanför textrutan */
+            background: black; /* Totalt svart bakgrund utanför textrutan */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -23,7 +23,7 @@
             max-width: 1500px;
             height: 80vh;
             background: white; 
-            border: 5px solid black;
+            border: 5px #353935;
             border-radius: 40px;
             display: flex;
             flex-direction: column;
