--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             max-width: 1500px;
             height: 80vh;
             background: white; 
-            border: 5px #353935;
+            border: 5px #36454F;
             border-radius: 40px;
             display: flex;
             flex-direction: column;
